fixed issues with projects not showing up

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,16 +7,22 @@
   
 }
 
-
-
-.hero {
-  width: 100%;
+body {
   height: 100vh;
+  width: 100vw;
   background-image: url("../images/background.png");
   background-size: cover;
   background-position: center;
-  position: relative;
-  overflow: hidden;
+  background-repeat: no-repeat;
+  
+}
+
+.hero {
+  /* width: 100%; */
+  /* height: 100% ; */
+
+  /* position: relative; */
+  /* overflow: hidden; */
 }
 
 .logo {
@@ -107,7 +113,7 @@ h1 {
   align-items: center;
   justify-content: space-around;
   position: absolute;
-  bottom: 0px;
+  bottom: -78px;
 }
 
 @keyframes bubble {
@@ -189,7 +195,7 @@ h1 {
   
  }
  .project img {
-  max-width: 200px;
+  max-width: 50vw;
  }
  .title{
   font-size: 50px;
@@ -197,5 +203,13 @@ h1 {
  .prj-title {
   font-size: 20px;
  }
-  
+
+ .side-bar {
+ 
+  height: 85%;
+  background: linear-gradient(#0054, #000729);
+  position: absolute;
+  right: 0;
+  top: 0;
+}
 }
